objects/Project_Time_Card__c.object
<CustomObject>
    <fields>
        <fullName>AE_PE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AE/PE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Time_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <inlineHelpText>Use Manage Time Card Entries to change Activity Type</inlineHelpText>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Interaction</fullName>
                </value>
                <value>
                    <fullName>Customer Support</fullName>
                </value>
                <value>
                    <fullName>Content Related Tasks</fullName>
                </value>
                <value>
                    <fullName>Strategy/Planning/Reporting</fullName>
                </value>
                <value>
                    <fullName>Traveling</fullName>
                </value>
                <value>
                    <fullName>PSP: Product Customization</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Admin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_By_Area__c</fullName>
        <description>Time Card Created by Area pulled from the user record.  The value saved at the time when time card has been created.</description>
        <label>Created By Area</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_by_Role_Name__c</fullName>
        <description>Time Card Created By Role Name . The field has been set at the time when the time card has been created.</description>
        <label>Created by Role Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Hours</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Hours_Since_Last_Reviewed_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Hours Since Last Reviewed Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_Team_Time_Card__c</fullName>
        <formula>CreatedBy.ManagerId = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Team Time Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_Time_Card__c</fullName>
        <formula>CreatedById =$User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Time Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>Product Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Application Deployment</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Computational Biology</fullName>
                </value>
                <value>
                    <fullName>Computational Finance</fullName>
                </value>
                <value>
                    <fullName>Control Systems</fullName>
                </value>
                <value>
                    <fullName>Embedded Code Generation</fullName>
                </value>
                <value>
                    <fullName>HDL Code Generation &amp; Verification</fullName>
                </value>
                <value>
                    <fullName>Image Processing &amp; Computer Vision</fullName>
                </value>
                <value>
                    <fullName>Math, Statistics &amp; Optimization</fullName>
                </value>
                <value>
                    <fullName>MATLAB</fullName>
                </value>
                <value>
                    <fullName>Model Verification &amp; Validation</fullName>
                </value>
                <value>
                    <fullName>Parallel Computing</fullName>
                </value>
                <value>
                    <fullName>Simscape</fullName>
                </value>
                <value>
                    <fullName>Polyspace</fullName>
                </value>
                <value>
                    <fullName>Real-Time Simulation &amp; Test</fullName>
                </value>
                <value>
                    <fullName>Robotics Systems</fullName>
                </value>
                <value>
                    <fullName>Signal Processing Systems</fullName>
                </value>
                <value>
                    <fullName>Simulink and Stateflow</fullName>
                </value>
                <value>
                    <fullName>Test &amp; Measurement</fullName>
                </value>
                <value>
                    <fullName>Wireless Systems</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Project__r.Project_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <description>Pulls the Project Status value from the related project, used in validation rules and time card entry behavior</description>
        <formula>TEXT(Project__r.Project_Status__c)</formula>
        <label>Project Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>MW_Project__c</referenceTo>
        <relationshipLabel>Time Cards</relationshipLabel>
        <relationshipName>Project_Time_Cards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Week_Date__c</fullName>
        <description>User Will fill Time card for particular date of the week.</description>
        <label>Week Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Week_Ending__c</fullName>
        <label>Week Ending</label>
        <type>Date</type>
    </fields>
    <label>Time Card</label>
    <listViews>
        <fullName>All_Time_Cards</fullName>
        <columns>NAME</columns>
        <columns>Week_Ending__c</columns>
        <columns>Hours__c</columns>
        <columns>Status__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Project_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Time Cards</label>
    </listViews>
    <nameField>
        <displayFormat>TC-{0000000000}</displayFormat>
        <label>Project Time Card Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Only_Manage_Your_Own_Time_Entries</fullName>
        <active>true</active>
        <description>Rule to prevent anyone but the resource on the time entry from editing or creating a time entry for them, with the exception of those listed in the custom setting to bypass it.</description>
        <errorConditionFormula>AND(
$User.Id !=  Project__r.OwnerId ,  $Setup.Project_Time_Validation_Settings__c.Manage_My_Time__c  
    ,$User.Id != PRIORVALUE(AE_PE__c)

)</errorConditionFormula>
        <errorMessage>You can only edit your own time entries.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Editing_Time_on_Closed_Projects</fullName>
        <active>true</active>
        <description>If the project status = closed, do not let users update any fields on the record</description>
        <errorConditionFormula>AND(
    $Setup.Project_Validation_Rule_Settings__c.Prevent_Editing_Time_on_Closed_Projects__c
    ,ISPICKVAL(Project__r.Project_Status__c ,&quot;Closed&quot;)
)</errorConditionFormula>
        <errorMessage>The Project that the Time Entry is related to is closed and changes are not able to be made unless the project is re-opened.  Contact your manager to have this change made to the Project.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Week_Date_is_Required_on_the_Time_card</fullName>
        <active>true</active>
        <description>prevent user from clearing/not entering the week date on the timecard</description>
        <errorConditionFormula>ISBLANK( Week_Date__c )</errorConditionFormula>
        <errorMessage>The Week Date needs to be set on the timecard</errorMessage>
    </validationRules>
</CustomObject>